--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icons/icon-96x96.png" />
     <!-- Primary Meta Tags -->
-    <meta name="title" content=" Oka Rajeb Abdillah | Frelancer | Developer | Content Creator"> 
+    <meta name="title" content=" Oka Rajeb Abdillah"> 
     <meta name="description" content="A Javascript Fullstack Web Developer and also instagram content creator">
     
     <!-- Open Graph / Facebook -->
@@ -33,7 +33,7 @@
     <!-- Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="manifest" href="./manifest.json" type="application/json" />
-    <title>Oka Rajeb Abdillah | Frelancer | Developer | Content Creator</title>
+    <title>Damnnson</title>
 	</head>
 	<body>
 		<div id="app"></div>
